kompose-factory/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose-factory
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose-factory
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: database
    spec:
      containers:
      - env:
        - name: NEO4J_AUTH
          value: none
        image: neo4j:3.5.11
        imagePullPolicy: ""
        name: database
        ports:
        - containerPort: 7474
        - containerPort: 7687
        resources: {}
        volumeMounts:
        - mountPath: /data neo4j
          name: database-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: database-claim0
        persistentVolumeClaim:
          claimName: database-claim0
status: {}
