kompose-factory/graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose-factory
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: graphql
  name: graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: graphql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose-factory
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: graphql
    spec:
      containers:
      - env:
        - name: BIND_HOST
          value: 0.0.0.0
        - name: BIND_PORT
          value: "8080"
        - name: NEO4J_HOST
          value: neo4j
        - name: NEO4J_PORT
          value: "7687"
        - name: PYTHONUNBUFFERED
          value: "1"
        image: fluxusregistry.azurecr.io/graphql:latest
        imagePullPolicy: ""
        name: graphql
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
