kompose-factory/math-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose-factory
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: math-api
  name: math-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: math-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose-factory
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: math-api
    spec:
      containers:
      - image: fluxusregistry.azurecr.io/math-api:latest
        imagePullPolicy: IfNotPresent
        name: math-api
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
