kompose-factory/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose-factory
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
  - name: "7474"
    port: 7474
    targetPort: 7474
  - name: "7687"
    port: 7687
    targetPort: 7687
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
