kompose-factory/visualisation-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose-factory
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: visualisation-api
  name: visualisation-api
spec:
  ports:
  - name: "5002"
    port: 5002
    targetPort: 5002
  selector:
    io.kompose.service: visualisation-api
status:
  loadBalancer: {}
